[gd_scene load_steps=10 format=3 uid="uid://cydkaxapl5a0x"]

[ext_resource type="Script" uid="uid://cpvvnehf0fkoa" path="res://Components/SongPreparation/song_preparation_scene.gd" id="1_pl6y0"]
[ext_resource type="PackedScene" uid="uid://bnk5hessaqj4" path="res://Components/PlayerScene/PlayerScene/PlayerScene.tscn" id="2_xcy35"]
[ext_resource type="PackedScene" uid="uid://dfn5wxdejq08f" path="res://Components/SongPreparation/ChoosenItems.tscn" id="3_gjxm4"]
[ext_resource type="PackedScene" uid="uid://bs16sf7vjh55t" path="res://Components/SongPreparation/Timeline.tscn" id="4_gfa2m"]
[ext_resource type="Script" uid="uid://b0tsibh15nwgt" path="res://Components/SongPreparation/Tutorial/song_preparation_tutorial.gd" id="5_hjhiw"]

[sub_resource type="Animation" id="Animation_k0ff4"]
resource_name = "Expand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerScene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerScene:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.667, 0.667), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SearchSystem:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-640, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Timeline:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 1080)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ControlPanel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-640, 0)]
}

[sub_resource type="Animation" id="Animation_dj41v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SearchSystem:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Timeline:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 720)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ControlPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ControlPanel/ColorPickerButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(372, 68)]
}

[sub_resource type="Animation" id="Animation_jgmos"]
resource_name = "appear_cp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ControlPanel/ColorPickerButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(372, 3), Vector2(372, 68)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icsjr"]
_data = {
&"Expand": SubResource("Animation_k0ff4"),
&"RESET": SubResource("Animation_dj41v"),
&"appear_cp": SubResource("Animation_jgmos")
}

[node name="SongPreparationScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl6y0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_icsjr")
}

[node name="PlayerScene" parent="." instance=ExtResource("2_xcy35")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_bottom = 0.667
offset_left = 0.640015
offset_right = 640.0
offset_bottom = 359.64
scale = Vector2(0.667, 0.667)

[node name="SearchSystem" parent="." instance=ExtResource("3_gjxm4")]
layout_mode = 1
anchor_top = 0.069
anchor_bottom = 0.661
offset_top = -74.52
offset_bottom = -73.88

[node name="Timeline" parent="." instance=ExtResource("4_gfa2m")]
layout_mode = 1
anchor_top = 0.669
anchor_bottom = 1.0
offset_top = -2.52002
offset_bottom = 0.0

[node name="ControlPanel" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.333
anchor_bottom = 0.065
offset_right = 0.640015
offset_bottom = -0.200005

[node name="NewProjectBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.043
anchor_right = 0.287
anchor_bottom = 0.957
offset_left = 0.16
offset_top = -0.00999999
offset_right = 0.320007
offset_bottom = 0.0100021
text = "New Project"

[node name="OpenExistingBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294
anchor_top = 0.043
anchor_right = 0.575
anchor_bottom = 0.957
offset_left = -0.160004
offset_top = -0.00999999
offset_right = -3.05176e-05
offset_bottom = 0.0100021
text = "Open Existing"

[node name="CloseProjectBtn" type="Button" parent="ControlPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294
anchor_top = 0.043
anchor_right = 0.575
anchor_bottom = 0.957
offset_left = -0.160004
offset_top = -0.00999999
offset_right = -3.05176e-05
offset_bottom = 0.0100021
text = "Close Project"

[node name="ColorPickerButton" type="ColorPickerButton" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.581
anchor_top = 0.043
anchor_right = 0.681
anchor_bottom = 0.957
offset_left = 0.160034
offset_top = 64.99
offset_right = 0.160034
offset_bottom = 65.01
text = "CP"

[node name="ColorPickerBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.581
anchor_top = 0.043
anchor_right = 0.681
anchor_bottom = 0.957
offset_left = 0.159973
offset_top = -0.00999999
offset_right = 0.159973
offset_bottom = 0.0100021
text = "CP"
metadata/_edit_use_anchors_ = true

[node name="MaskingLayerBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.686
anchor_top = 0.043
anchor_right = 0.786
anchor_bottom = 0.957
offset_left = -0.0400391
offset_top = -0.00999999
offset_right = -0.0399475
offset_bottom = 0.0100021
text = "ML"

[node name="SubtitleLayerBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.791
anchor_top = 0.043
anchor_right = 0.891
anchor_bottom = 0.957
offset_left = -0.23999
offset_top = -0.00999999
offset_right = -0.23999
offset_bottom = 0.0100021
text = "SL"

[node name="FMBtn" type="Button" parent="ControlPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.895
anchor_top = 0.043
anchor_right = 0.995
anchor_bottom = 0.957
offset_left = 0.199951
offset_top = -0.00999999
offset_right = 0.199951
offset_bottom = 0.0100021
text = "FM"

[node name="Tutorial" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_hjhiw")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.194
anchor_right = 0.331
anchor_bottom = 0.634
offset_left = 0.0799999
offset_top = -0.520004
offset_right = 0.479919
offset_bottom = 0.279968

[connection signal="pressed" from="ControlPanel/NewProjectBtn" to="." method="_on_new_project_btn_pressed"]
[connection signal="pressed" from="ControlPanel/OpenExistingBtn" to="." method="_on_open_existing_btn_pressed"]
[connection signal="pressed" from="ControlPanel/CloseProjectBtn" to="." method="_on_close_project_btn_pressed"]
[connection signal="pressed" from="ControlPanel/ColorPickerBtn" to="." method="_on_color_picker_btn_pressed"]
[connection signal="pressed" from="ControlPanel/MaskingLayerBtn" to="." method="_on_masking_layer_btn_pressed"]
[connection signal="pressed" from="ControlPanel/SubtitleLayerBtn" to="." method="_on_subtitle_layer_btn_pressed"]
[connection signal="pressed" from="ControlPanel/FMBtn" to="." method="_on_fm_btn_pressed"]
